--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 </a>
             </article>        
         </section>
-        <footer class="footer">
+        <section class="footer">
             <div class="footer-contacts">
                 <div class="footer-title-firm">
                     <span>ТОО «KazITSystem»</span>
@@ -182,6 +182,11 @@
                     ГУ «Комитет науки Министерства образования и науки
                     Республики Казахстан»
                 </p>
+            </div>
+        </section>
+        <footer class="copy">
+            <div class="copy-right">
+                <span>&copy; 2024г. Всё права защищены.</span>
             </div>
         </footer>
     </main>
