--- a/index.html
+++ b/index.html
@@ -3,33 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/tablet.css">
     <title>Steel Glow</title>
 </head>
 <body>
     <main class="grid-section">
         <header class="head-bg">
             <article class="top-logos">
-                <div class="logo-sg">
-                    <img src="images/logo-sg.png" alt="">
+                <div class="logo-sg wow slideInLeft" data-wow-duration="1s" data-wow-delay="0.2s">
+                    <img src="images/logo-sg.png" alt="Logo SteeGlow">
                 </div>
-                <div class="logo-fnd">
-                    <img src="images/logo-fnd.png" alt="">
+                <div class="logo-fnd wow slideInRight" data-wow-duration="1s" data-wow-delay="0.2s" >
+                    <img src="images/logo-fnd.png" alt="Logo Fond">
                 </div>
             </article>
             <article>
-                <div class="slide">
-                    <img src="images/slide.png" alt="">
+                <div class="slide wow bounceIn" data-wow-duration="1s" data-wow-delay="0.2s">
+                    <img class="img-slide" src="images/slide.png" alt="Logo Slogan">
                 </div>
             </article>
-            <article class="contacts">
+            <article class="contacts wow bounceInDown" data-wow-duration="1s" data-wow-delay="0.2s">
                 <div class="phone-contacts">
-                    <img src="images/phone.png" alt="" srcset="">
+                    <img src="images/phone.png" alt="picture phone">
                     <a href="tel:+77014190241">
                         <span>+7 701 419 02 41</s>
                     </a>
                 </div>
-                <div class="about-us">
+                <div class="about-us wow">
                     <p>
                         <span>SteelGlow</span> — специализированная компания, работающая
                         в сфере светодиодного освещения для тепличных комплексов
@@ -43,14 +45,14 @@
                 
                 </div>
             </article>
-            <article class="slogan">
+            <article class="slogan wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.2s">
                 <p>
                     Нам удалось разработать уникальный в своем сегменте светильник на основе </br>
                     светодиодов с различной длины волны и их оптимального сочетания, который:
                 </p>
             </article>
             <article class="block-list">
-                <div class="first-column">
+                <div class="first-column wow slideInLeft" data-wow-duration="1s" data-wow-delay="0.2s">
                     <div class="ecology">
                         <img src="images/icon1.png" alt="">
                         <p>
@@ -80,7 +82,7 @@
                     </div>
                     
                 </div>
-                <div class="second-column">
+                <div class="second-column wow slideInRight" data-wow-duration="1s" data-wow-delay="0.2s">
                     <div class="graphics">
                         <img src="images/icon4.png" alt="">
                         <p>
@@ -121,7 +123,7 @@
             </article>
             <article class="catalog">
                 <a href="#">
-                    <div class="catalog-item">
+                    <div class="catalog-item wow bounceInDown" data-wow-duration="1s" data-wow-delay="0.2s">
                         <img src="images/nofoto.png" alt="">
                         <div class="title-item">
                             <span>Наименованние</span></br>
@@ -130,7 +132,7 @@
                     </div>
                 </a>
                 <a href="#">
-                    <div class="catalog-item">
+                    <div class="catalog-item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.2s">
                         <img src="images/nofoto.png" alt="">
                         <div class="title-item">
                             <span>Наименованние</span></br>
@@ -139,7 +141,7 @@
                     </div>
                 </a>
                 <a href="#">
-                    <div class="catalog-item">
+                    <div class="catalog-item wow bounceInDown" data-wow-duration="1s" data-wow-delay="0.2s">
                         <img src="images/nofoto.png" alt="">
                         <div class="title-item">
                             <span>Наименованние</span></br>
@@ -148,7 +150,7 @@
                     </div>
                 </a>
             </article>
-            <article class="phone-ordering">
+            <article class="phone-ordering wow bounceInDown" data-wow-duration="1s" data-wow-delay="0.2s">
                 <a href="tel:+77014190241">
                     <span>Телефон для заказа:</span>
                     <span>+7 701 419 02 41</span>
@@ -156,7 +158,7 @@
             </article>        
         </section>
         <section class="footer">
-            <div class="footer-contacts">
+            <div class="footer-contacts wow bounceInLeft" data-wow-duration="1s" data-wow-delay="0.2s">
                 <div class="footer-title-firm">
                     <span>ТОО «KazITSystem»</span>
                 </div>
@@ -174,7 +176,7 @@
                     </a>
                 </div>
             </div>
-            <div class="footer-information">
+            <div class="footer-information wow bounceInRight" data-wow-duration="1s" data-wow-delay="0.2s">
                 <p>
                     «Настоящий проект осуществлен / осуществляется в рамках
                     реализации грантового финансирования коммерциализации
@@ -189,6 +191,27 @@
                 <span>&copy; 2024г. Всё права защищены.</span>
             </div>
         </footer>
+        <a href="https://api.whatsapp.com/send/?phone=+77014190241&text=Здравствуйте. Пишу с сайта, есть несколько вопросов"
+            target="_blank" title="Перейти в чат" id="whatsappLink" rel="nofollow">
+            <span title="Перейти в чат" class="whatsapp-button"></span>
+        </a>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="js/wow.min.js"></script>
+        <script src="js/upbtn.js"></script>
+        <script src="js/whatsupscrollbtn.js"></script>
+
+    <script>
+        wow = new WOW({
+            boxClass: 'wow',
+            animateClass: 'animated',
+            offset: 0,
+            mobile: true,
+            live: true
+        })
+        wow.init();
+    </script>    
 </body>
 </html>
