--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/favicon-16x16.png" type="image/png">
+    <link rel="shortcut icon" href="/images/favicon-16x16.png" type="image/png">
+    <link rel="icon" href="/images/favicon-32x32.png" type="image/png">
+    <link rel="shortcut icon" href="/images/favicon-32x32.png" type="image/png">
+    <link rel="icon" href="/images/apple-touch-icon.png" type="image/png">
+    <link rel="shortcut icon" href="images/apple-touch-icon.png" type="image/png">
+    <link rel="icon" href="/images/android-chrome-192x192.png" type="image/png">
+    <link rel="shortcut icon" href="images/android-chrome-192x192.png" type="image/png">
+    <link rel="icon" href="/images/android-chrome-512x512.png" type="image/png">
+    <link rel="shortcut icon" href="images/android-chrome-512x512.png" type="image/png">
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/tablet.css">
