--- a/index.html
+++ b/index.html
@@ -15,12 +15,6 @@
     <link rel="shortcut icon" href="images/android-chrome-192x192.png" type="image/png">
     <link rel="icon" href="/images/android-chrome-512x512.png" type="image/png">
     <link rel="shortcut icon" href="images/android-chrome-512x512.png" type="image/png">
-    <link rel="preload" href="https://steelglow.kz/css/fonts/Montserrat-Regular.ttf" as="font" type="font/ttf"
-        crossorigin="anonymous">
-    <link rel="preload" href="https://steelglow.kz/css/fonts/Montserrat-Bold.ttf" as="font" type="font/ttf"
-        crossorigin="anonymous">
-    <link rel="preload" href="https://steelglow.kz/css/fonts/Montserrat-Light.ttf" as="font" type="font/ttf"
-        crossorigin="anonymous">
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/tablet.css">
@@ -50,11 +44,11 @@
                     </a>
                 </div>
                 <div class="about-us wow">
-                    <p>
+                    <p class="light-font-text">
                         <span>SteelGlow</span> — специализированная компания, работающая
                         в сфере светодиодного освещения для тепличных комплексов
                         и фермерских теплиц, как комплексный интегратор по
-                        решению задач досветки «под ключ»
+                        решению задач досветки «под ключ».
                     </p>
                 </div>
             </article>
