--- a/index.html
+++ b/index.html
@@ -163,6 +163,39 @@
                     </div>
                 </a>
             </article>
+            <article class="bottom-feeds" id="form-bottom">
+                <div class="form-feedsback_bg">
+                    <div class="form-subtitle">
+                        <h3><strong>Быстрый способ обсудить детали</strong></h3>
+                    </div>
+                    <form action="/mailsender.php" method="post" class="form-feedback" id="feedback-form">
+                        <div class="name-input">
+                            <label for="feedback-name"><strong>Имя:</strong></label>
+                            <input required type="text" id="feedback-name" name="feedback-name" placeholder="Введите ваши данные"
+                                pattern="[A-Za-zА-Яа-яЁё\s]+" maxlength="40">
+                        </div>
+                        <div class="phone-input">
+                            <label for="feedback-phone"><strong>Телефон:</strong></label>
+                            <input required type="text" id="feedback-phone" name="feedback-phone" placeholder="Введите ваш номер">
+                        </div>
+                        <div class="email-input">
+                            <label for="feedback-email"><strong>E-mail:</strong></label>
+                            <input type="email" name="feedback-email" id="feedback-email" placeholder="Введите ваш e-mail">
+                        </div>
+                        <label for="feedback-checkbox" class="form-feedback-container-checkbox">
+                            <input type="checkbox" checked="checked" name="feedback-checkbox" id="feedback-checkbox">
+                            <span class="checkmark"></span>
+                            <strong>Согласен предоставить персональные данные</strong>
+                        </label>
+                        <div class="form-feedback-btn">
+                            <input type="hidden" name="source_page" value="Главная">
+                            <button type="button" onclick="submitForm('feedback-form')">
+                                <strong>Отправить</strong>
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </article>
             <article class="phone-ordering wow bounceInDown" data-wow-duration="1s" data-wow-delay="0.2s">
                 <a href="tel:+77014190241">
                     <span>Телефон для заказа:</span>
@@ -212,7 +245,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.3.4/jquery.inputmask.bundle.min.js"></script>
+        <script src="js/jquery.fancybox.js"></script>
         <script src="js/wow.min.js"></script>
+        <script src="js/formsender.js"></script>
         <script src="js/upbtn.js"></script>
         <script src="js/whatsupscrollbtn.js"></script>
 
@@ -225,6 +262,32 @@
             live: true
         })
         wow.init();
+    </script>
+    <script>
+        $(document).ready(function () {
+            $('#feedback-phone').inputmask({
+                mask: '+7 (999) 999-99-99',
+                showMaskOnHover: true,
+                showMaskOnFocus: false,
+                placeholder: '_',
+            });
+
+        });
+    </script>
+    <script>
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    window.scrollTo({
+                        top: target.offsetTop,
+                        behavior: 'smooth'
+                    });
+                }
+            });
+        });
     </script>    
 </body>
 </html>
