--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 </a>
             </article>
             <article class="bottom-feeds" id="form-bottom">
-                <div class="form-feedsback_bg">
+                <div class="form-feedsback_bg wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.2s">
                     <div class="form-subtitle">
                         <h3><strong>Быстрый способ обсудить детали</strong></h3>
                     </div>
