--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="shortcut icon" href="images/android-chrome-192x192.png" type="image/png">
     <link rel="icon" href="/images/android-chrome-512x512.png" type="image/png">
     <link rel="shortcut icon" href="images/android-chrome-512x512.png" type="image/png">
+    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/tablet.css">
@@ -135,25 +136,75 @@
                 </h1>
             </article>
             <article class="catalog">
-                <a href="#">
+                <div class="hover">
                     <div class="catalog-item wow bounceInDown" data-wow-duration="1s" data-wow-delay="0.2s">
-                        <img src="images/nofoto.png" alt="">
+                        <a href="images/ССТ-100W_black_2.webp" data-fancybox="gallery" data-caption="Чёрный: ССТ-100W">
+                            <img src="images/ССТ-100W_black_1.webp" alt="ССТ-100W">
+                        </a>
                         <div class="title-item">
-                            <span>Наименованние</span></br>
-                            <span>Цена: ХХХ</span>
+                            <span>
+                                Тип светодиодов - Arlight;</br>
+                                Цветовая температура: 5000К;</br>
+                                Степень защиты: IP67;</br>
+                                Угол рассеивания: 120°;</br>
+                                Входное напряжение: 190-260В;</br>
+                                Температура эксплуатации: от -40°С до +50°С;</br>
+                                Срок службы светодиодов - 50000ч;</br>
+                            </span>
+                            <p class="hide-content">
+                                Гарантия - 1 год. </br>
+                                Чёрный: ССТ-100W;</br>
+                                Наименование продукции: Чёрный ССТ-100W - ТОО "KazITSystem";</br>
+                                Номинальное напряжение, В: 220;</br>
+                                Номинальную мощность, Вт: 100;</br>
+                                Степень защиты оболочки по ГОСТ 14254: IP67;</br>
+                                Месяц и год изготовления: 07.24;</br>
+                                Единый знак обращения продукции на рынке: EAC;</br>
+                                Обозначение настоящего стандарта: СТ ТОО 170940030077-001-2024.</br>
+                            </p>
+                            </span></br>
+                            <div class="btn-section-third">
+                                <button class="button_show_more">Подробнее</button>
+                            </div>
+                            <!-- <span>Цена: ХХХ</span> -->
                         </div>
                     </div>
-                </a>
-                <a href="#">
+                </div>
+                <div class="hover">
                     <div class="catalog-item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.2s">
-                        <img src="images/nofoto.png" alt="">
+                        <a href="images/ССТ-200W_red_2.webp" data-fancybox="gallery" data-caption="Красный: ССТ-200W">
+                            <img src="images/ССТ-200W_red_1.webp" alt="ССТ-200W">
+                        </a>
                         <div class="title-item">
-                            <span>Наименованние</span></br>
-                            <span>Цена: ХХХ</span>
+                        <span>
+                            Тип светодиодов - Arlight;</br>
+                            Цветовая температура: 5000К;</br>
+                            Степень защиты: IP67;</br>
+                            Угол рассеивания: 120°;</br>
+                            Входное напряжение: 190-260В;</br>
+                            Температура эксплуатации: от -40°С до +50°С;</br>
+                            Срок службы светодиодов - 50000ч;</br>
+                        </span>
+                        <p class="hide-content">
+                            Гарантия - 1 год. </br>
+                            Красный: ССТ-200W;</br>
+                            Наименование продукции: Красный ССТ-200W - ТОО "KazITSystem";</br>
+                            Номинальное напряжение, В: 220;</br>
+                            Номинальную мощность, Вт: 200;</br>
+                            Степень защиты оболочки по ГОСТ 14254: IP67;</br>
+                            Месяц и год изготовления: 07.24;</br>
+                            Единый знак обращения продукции на рынке: EAC;</br>
+                            Обозначение настоящего стандарта: СТ ТОО 170940030077-001-2024.</br>
+                        </p>
+                       </br>
+                            <div class="btn-section-third">
+                                <button class="button_show_more">Подробнее</button>
+                            </div>
+                            <!-- <span>Цена: ХХХ</span> -->
                         </div>
                     </div>
-                </a>
-                <a href="#">
+                </div>
+                <!-- <a href="#">
                     <div class="catalog-item wow bounceInDown" data-wow-duration="1s" data-wow-delay="0.2s">
                         <img src="images/nofoto.png" alt="">
                         <div class="title-item">
@@ -161,7 +212,7 @@
                             <span>Цена: ХХХ</span>
                         </div>
                     </div>
-                </a>
+                </a> -->
             </article>
             <article class="bottom-feeds" id="form-bottom">
                 <div class="form-feedsback_bg wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.2s">
@@ -247,11 +298,46 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.3.4/jquery.inputmask.bundle.min.js"></script>
-        <script src="js/jquery.fancybox.js"></script>
+        <script src="js/jquery.fancybox.min.js"></script>
         <script src="js/wow.min.js"></script>
         <script src="js/formsender.js"></script>
         <script src="js/upbtn.js"></script>
         <script src="js/whatsupscrollbtn.js"></script>
+
+    <script>
+ $(document).ready(function () {
+        $(".title-item").each(function () {
+            let more = $(this).find(".button_show_more");
+            let hide = $(this).find(".hide-content");
+            hide.hide();
+            more.click(function (event) {
+                event.preventDefault(); // предотвращение действия по умолчанию
+                hide.slideToggle(function () {
+                    let catalogItem = $(this).closest(".catalog-item");
+                    if (hide.is(":visible")) {
+                        more.text("Скрыть");
+                        if (window.innerWidth <= 425) {
+                            catalogItem.css('height', '900px');
+                        } else if (window.innerWidth <= 768) {
+                            catalogItem.css('height', 'auto');
+                        } else {
+                            catalogItem.css('height', 'auto');
+                        }
+                    } else {
+                        more.text("Подробнее");
+                        if (window.innerWidth <= 425) {
+                            catalogItem.css('height', 'auto');
+                        } else if (window.innerWidth <= 768) {
+                            catalogItem.css('height', '570px');
+                        } else {
+                            catalogItem.css('height', '630px');
+                        }
+                    }
+                });
+            });
+        });
+    });
+    </script>   
 
     <script>
         wow = new WOW({
@@ -275,19 +361,19 @@
         });
     </script>
     <script>
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
+    //     document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+    //         anchor.addEventListener('click', function (e) {
+    //             e.preventDefault();
 
-                const target = document.querySelector(this.getAttribute('href'));
-                if (target) {
-                    window.scrollTo({
-                        top: target.offsetTop,
-                        behavior: 'smooth'
-                    });
-                }
-            });
-        });
-    </script>    
+    //             const target = document.querySelector(this.getAttribute('href'));
+    //             if (target) {
+    //                 window.scrollTo({
+    //                     top: target.offsetTop,
+    //                     behavior: 'smooth'
+    //                 });
+    //             }
+    //         });
+    //     });
+    // </script>    
 </body>
 </html>
