--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         </a>
                         <div class="title-item">
                             <span>
-                                Тип светодиодов - Arlight;</br>
+                                <span>Тип светодиодов - Arlight;</span></br>
                                 Цветовая температура: 5000К;</br>
                                 Степень защиты: IP67;</br>
                                 Угол рассеивания: 120°;</br>
@@ -177,7 +177,7 @@
                         </a>
                         <div class="title-item">
                         <span>
-                            Тип светодиодов - Arlight;</br>
+                            <span>Тип светодиодов - Arlight;</span></br>
                             Цветовая температура: 5000К;</br>
                             Степень защиты: IP67;</br>
                             Угол рассеивания: 120°;</br>
